Updated readme, fixed comment in app.py, updated openapi.yaml
